@@ -7,6 +7,7 @@ trunk
 * eliminated UnusualLabels.R test case.  Too many problems with windows versus OS X versus linux.
 * implemented vech() and vechs() functions: half-vectorization and strict half-vectorization
 * fixed bug in ordinal FIML when # of data columns > # of thresholds
+* added 'frontendTime' and 'backendTime' values to summary() output. They store the elapsed time of a model in the R front-end and C back-end, respectively.
 
 Release 0.2.3-1006
 ==================
